...
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text=""
            android:textSize="18sp"
            android:textStyle="bold"
...
        >

        <ImageView
            android:id="@+id/quote_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/quote"
            app:layout_constraintTop_toTopOf="@+id/quote"
            app:layout_constraintLeft_toLeftOf="@+id/quote"
            android:rotation="180" />
        <TextView
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
...
