<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/charactersFragment">

    <fragment
        android:id="@+id/charactersFragment"
        android:name="com.example.myapplication.ui.CharactersFragment"
        android:label="Characters"
        tools:layout="@layout/characters_fragment" >
        <action
            android:id="@+id/action_charactersFragment_to_characterQuoteFragment"
            app:destination="@id/characterQuoteFragment" />

    </fragment>
    <fragment
        android:id="@+id/characterQuoteFragment"
        android:name="com.example.myapplication.ui.CharacterQuoteFragment"
        android:label="Character quotes"
        tools:layout="@layout/character_quote_fragment" />
</navigation>